test/spec_vectors/simd_boolean/fail/module_5.wat
(module (func (result i32) (i16x8.all_true (i32.const 0))))